second all commit

--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
+<head>
     <title>Indie Class</title>
-</header>
+</head>
 <body>
     <h1>
         welcome, This is Indie Class!!!
     </h1>
+    <h2>how is going!!??</h2>
 </body>
 </html>
