--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Indie Class</title>
 </head>
 <body>
-    <h1>
+    <h1 style:"color: blue;">
         welcome, This is Indie Class!!!
     </h1>
     <h2>how is going!!??</h2>
