added a full stop

--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>
-        welcome, This is Indie Class!!!
+        welcome, This is Indie Class.
     </h1>
     <h2>how is going!!??</h2>
     hello there!!!
