--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,11 @@
     <title>Indie Class</title>
 </head>
 <body>
-    <h1 style:"color: blue;">
+    <h1>
         welcome, This is Indie Class!!!
     </h1>
-    <h2>how is going!!??</h2>
+    <h2>how is going!?</h2>
+    
     hello there!!!
 </body>
 </html>
