--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <h1>
         welcome, This is Indie.!
     </h1>
-    <h2>how is going!?</h2>
+    <h2>how is going!?...</h2>
     
     hello there!!!
 </body>
